<resources>
    <string name="app_name">ViHealthy</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Register</string>
    <string name="view">view</string>
    <string name="chat">chat</string>
    <string name="search">Search</string>
    <string name="what_s_on_your_mind">Enter your question</string>
    <string name="workspace_id">6e5faf1a-9eeb-4f4b-9df8-dd5edaaa7711</string> 
    <string name="conversationUsername">1d82fb20-a16c-49ab-bbec-df261f1d973f</string> 
    <string name="conversationPassword">Ub3w5oleo1FF</string>  

    <!--Watson Speech-To-Text Service Credentials--> 
    <string name="STT_username">faee8d6a-43f2-4145-8c8f-170c688dfd51</string> 
    <string name="STT_password">wH6GN5ZFHoYI</string>
    <string name="mobileanalytics_apikey">5bc78043-759d-4e52-9355-861b406bdaef</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>  
    <string name="facebook_app_id">932528780231040</string>
    <string name="fb_login_protocol_scheme">fb932528780231040</string>
    <string name="title_activity_maps">Map</string>
    <string name="vihealthy">ViHealthy</string>
    <string name="list_diseases">Danh mục bệnh</string>
    <string name="traditional_medicine">Bài thuốc đông y</string>
    <string name="chat_bot">Chat bot</string>
    <string name="health_tips">Mẹo vặt sức khỏe</string>
    <string name="map">Map</string>
    <string name="place">Địa chỉ tin cậy</string>
    <string name="detect">Nhận diện thuốc</string>
    <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
    <string name="btnlogin">Login</string>
    <string name="signupnow">SignUpNow</string>
    <string name="enter_email">input your email</string>
    <string name="enterthepss">input your password</string>
    <string name="mini_app_name">life for you</string>
    <string name="rememberpass">Remember me</string>
    <string name="signup">SignUp</string>
    <string name="confim_pass">confirm pass</string>
    <string name="email_erorr">emailerror</string>
    <string name="pass_error">passerror</string>
    <string name="confim_pass_erorr">confirmpass error</string>
    <string name="time">time</string>
    <string name="caculateIBM">Tính IBM</string>
    <string name="ibm">Tính IBM</string>
    <string name="question">Câu Hỏi</string>
    <string name="answer">Enter the answer</string>

</resources>
