<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_splash_screen"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen16dp"
    android:paddingRight="@dimen/dimen16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vihealthy"
                android:textColor="@color/bg_bubble_self"
                android:textSize="@dimen/dimen40dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="@dimen/dimen5dp"
                android:padding="@dimen/dimen5dp"
                app:cardBackgroundColor="@color/blue_light"
                android:id="@+id/btn_diseases">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_danh_muc_benh" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:text="@string/list_diseases"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen16dp"
                android:layout_weight="1"
                android:elevation="@dimen/dimen16dp"
                android:padding="@dimen/dimen5dp"
                app:cardBackgroundColor="@color/orange"
                android:id="@+id/btn_2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_carot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:text="@string/traditional_medicine"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="@dimen/dimen5dp"
                android:padding="@dimen/dimen5dp"
                app:cardBackgroundColor="@color/green"
                tools:ignore="NestedWeights"
                android:id="@+id/btn_3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_meo_vat_suc_khoe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:text="@string/health_tips"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen16dp"
                android:layout_weight="1"
                android:elevation="5dp"
                android:padding="@dimen/dimen5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:id="@+id/btn_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_calculator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dimen10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/red"
            tools:ignore="Suspicious0dp"
            android:id="@+id/btn_chat_bot">

            <TextView
                style="@style/title_mini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chat_bot" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dimen16dp"
                android:layout_marginTop="@dimen/dimen30dp"
                android:src="@drawable/ic_doctor" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

        </LinearLayout>
    </LinearLayout>

</LinearLayout>